--- a/contact.html
+++ b/contact.html
@@ -23,27 +23,35 @@
   <section class="hero">
     <div class="hero-text">
       <h1>Contact Us</h1>
-      <p>We would love to hear from you. Reach out to us below.</p>
+      <p>We’d love to hear from you. Please fill out the form below.</p>
     </div>
   </section>
 
   <section class="form-section">
-    <!-- Formspree form -->
     <form class="contact-form" action="https://formspree.io/f/xvgaaolb" method="POST">
-      <label>Your email:
-        <input type="email" name="email" required />
-      </label>
-      <label>Your message:
-        <textarea name="message" required></textarea>
-      </label>
-      <button type="submit">Send</button>
+      <div class="form-group">
+        <label for="first-name">Full Name:</label>
+        <input type="text" id="first-name" name="first-name" required />
+      </div>
+      <div class="form-group">
+        <label for="email">Your Email:</label>
+        <input type="email" id="email" name="email" required />
+      </div>
+      <div class="form-group">
+        <label for="message">Your Message:</label>
+        <textarea id="message" name="message" rows="6" required></textarea>
+      </div>
+      <button type="submit">Send Message</button>
     </form>
   </section>
 
- 
   <footer>
-  <p>&copy; 2025 MySchool. All rights reserved. | Created by <a href="https://chrohail.org" target="_blank" title="Visit Chaudhry Rashid's website"><span class="emoji">🔗</span> Chaudhry Rashid</a></p>
-</footer>
+    <p>&copy; 2025 MySchool. All rights reserved. | Created by 
+      <a href="https://chrohail.org" target="_blank" title="Visit Chaudhry Rashid's website">
+        <span class="emoji">🔗</span> Chaudhry Rashid
+      </a>
+    </p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
